--- a/hw4.tex
+++ b/hw4.tex
@@ -65,11 +65,13 @@ $$C_2(T) - C_1(T) = \sum_{ n = i }^{j} Q_n$$
 During the construction of the optimal binary tree, we will use the following formula: \\
 $$C(i,j) = \min_{i \le n \le j} \lbrace C(i,k-1) + C(k+1,j) + \sum_{m = i}^{j} P_m + \sum_{m = i - 1}^{j} Q_m \rbrace$$
 Assume we find the optimal solution $k' \in [i,j] $ by using $C_2(T)$, then we can say that for any $k \in [i,j]$: \\
-$$C_2(i,k-1) + C_2(k+1,j) \le C_2(i,k'-1) + C_2(k'+1,j)$$
+$$C_2(i,k-1) + C_2(k+1,j) \ge C_2(i,k'-1) + C_2(k'+1,j)$$
 $$\Leftrightarrow$$
-$$C_1(i,k-1) + \sum_{ n = i }^{k-1} Q_n + C_1(k+1,j) + \sum_{ n = k+1 }^{j} Q_n \le C_1(i,k'-1) + \sum_{ n = i }^{k'-1} Q_n + C_1(k'+1,j) + \sum_{ n = k'+1 }^{j} Q_n$$
+$$C_1(i,k-1) + \sum_{ n = i }^{k-1} Q_n + C_1(k+1,j) + \sum_{ n = k+1 }^{j} Q_n \ge C_1(i,k'-1) + \sum_{ n = i }^{k'-1} Q_n + C_1(k'+1,j) + \sum_{ n = k'+1 }^{j} Q_n$$
 $$\Leftrightarrow$$
-$$C_1(i,k-1) + C_1(k+1,j) \le C_1(i,k'-1) + C_1(k'+1,j)$$
+$$C_1(i,k-1) +  C_1(k+1,j) + \sum_{ n = i }^{j} Q_n \ge C_1(i,k'-1) + C_1(k'+1,j) + \sum_{ n = i }^{j} Q_n$$
+$$\Leftrightarrow$$
+$$C_1(i,k-1) + C_1(k+1,j) \ge C_1(i,k'-1) + C_1(k'+1,j)$$
 We can see that we will choose the same $k'$ to be our optimal solution using $C_1(T)$. Hence, these two cost model will produce the same optimal binary tree.
 
 \problem{3}
@@ -170,5 +172,41 @@ $\bullet \quad$ The total runtime of this algorithm is $\mathcal{O}(n^2)$ \\
 
 \problem{5}
 \solution
+1) We first sort all points according to their x coordinate in increasing order, we use $1,\cdots,n$ as their index. The point with index 1 is the starting point and point with index n is one of the three turning point. \\
 
+2) In a 4-tonic tour, we should have one starting point and three turning points. Because we can know that the starting point must be point with index 1 and one of the turning point must be the point with index n. So we choose two other turning points among points from 2 to n-1 randomly. Denote the chosen points as a and b, And assume that $x_{a}<x_{b}$. Now we can have four paths in the 4-tonic tour: $p1: 1 \to n, p2: a \to n, p3: a \to b, p4: 1 \to b$ \\
+
+3) Create a 4-dimensional table $L[i,j,p,q]$ with size n in each dimension and initialize every entry with positive infinity. In this table, $i,j,p,q$ are the farthest points on path p1, p4, p2, p3 respectively. $L[i,j,p,q]$ is the current minimum of length sum of sub path from 1 to i on p1, sub path from 1 to j on p4, sub path from a to p on p2 and the sub path from a to q on p3. \\
+
+4) We use the following rules to update the table: \\
+Denote the next point( excluding 1 and a) to put into one of P1, P2, P3 and P4 as k(index). k starts at 2 and ends at n.
+Base Case:  $L[1,1,a,a]=0$ \\
+Recursion Case: \\
+Case 1: if $1<k<a$, \\
+$k = 1+\max\{i,j\}$
+Denote d(c,d) as distance between point c and d.
+$L[k,j,a,a]= \min \{L[i,j,a,a] + d(k,j), L[k,j,a,a] \}$
+$L[i,k,a,a]= \min \{L[i,j,a,a] + d(k,i), L[i,k,a,a] \}$
+Case 2: if $a<r<b$, \\
+$ k = 1+\max \{i,j,p,q \} $ \\
+$L[k,j,p,q] = \min \{L[i,j,p,q] + d(k,i), L[k,j,p,q] \}$ \\ 
+$L[i,k,p,q] = \min \{L[i,j,p,q] + d(k,j), L[i,k,p,q] \}$ \\
+$L[i,j,k,q] = \min \{L[i,j,p,q] + d(p,k), L[i,j,k,q] \}$ \\
+$L[i,j,p,k] = \min \{L[i,j,p,q] + d(q,k), L[i,j,p,k] \}$ \\
+Case 3: if $k=b$, \\
+$L[i,b,p,b] = \min \{ L[i,j,p,q] + d(b,j) + d(b,q), L[i,j,p,k] \}$ \\
+Case 4: if $b<k<n$, \\
+$k=1 + \max \{i,p\}$ \\
+$L[k,b,p,b] = \min \{L[i,b,p,b] + d(i,k) \}$ \\
+$L[i,b,k,b] = \min \{L[i,b,p,b] + d(k,p) \}$ \\
+Case 5: if $k=n$, \\
+$L[n,b,n,b] = \min \{L[i,b,p,b] + d(n,i) + d(p,n) \}$ \\
+Correctness: \\
+Inductive hypothesis: \\
+The algorithm would offer the optimal 4 tonic tour of points set 1 to n, for $n < n'$, for some $n'$. we can inductively prove the algorithm from $n'$. \\
+Inductive case: \\
+In base case: \\
+We have only two points and need to add k to the path. If k is less than a, k could only be on p1 or p4, since the second path and the third path start from a. Therefore, if k is on the first path, by trying all different i, we can get the minimum value of $L[k, j, a, a]$. We can apply this approach to the last path and get the minimum value of the last path. If $a < k < b$, we need to take four scenarios into consideration when we try to put k. If k is on p1, by trying all different i, we can get the minimum value of $L[k, j, p, q]$, If k is on p4, by trying all different j, we can get the minimum value of $L[i, k, p, q]$. If k is on p2, by checking all different p, we can get the minimum value of $L[i, j, k, q]$. If k is on p3, by checking all different q, we can get the minimum value of $L[i, j, p, k]$. If k equals to b, k must be the turning point between p3 and p4. In this case, we need to check all different j and we can get the minimum value of $L[i, b, p, q]$. In case of $b < k < n$, k should be on p1 or p2. If it is on p1, by checking all different i, we can get the the minimum value of $L[k, b, p, b]$. If it is on p2, by trying all different p, we can get the minimum value of $L[i, b, k, b]$. Finally, when k is the last element to add, it should be the rightmost point of p1 and p2. Therefore, by trying all i, we can get the minimum path of given a,b. After trying all a,b pairs, we can get the optimal 4 tonic-tour. \\
+Time complexity:
+The table size is $n^4$, for each entry in the table, we should try all different i, the runtime is $\mathcal{O}(n)$. We also need to try all different a, b, there are $\frac{(n-3)(n-2)}{2}$ choices, therefore, the time complexity should be $\mathcal{O}(n^7)$.
 \end{document}
