--- a/hw4.tex
+++ b/hw4.tex
@@ -53,7 +53,7 @@ I think the greedy algorithm discussed in the paper is incorrect. The algorithm 
 The paper claims that it leaves as much opportunity as possilble for the remaining symbols to be select. However, we can easily find counter example to prove it wrong. For example, consider these two input array: \\
 $$X = [A,B,B,B]$$
 $$Y = [B,A,B,B]$$
-In the first iteration, accoding to the algorithm presented in the paper. We need to discard $A$ in $X$, then the result of this algorithm for the longest common subsequence will be $BB$. However, we can easily note that the correct result should be $ABB$.
+In the first iteration, accoding to the algorithm presented in the paper. $P1 = 2, P2 = 1, P1 > P2$, we choose $R = P2 = 1, L = \{ P2 \}, i = i + 1$. And we won't take $A$ into consideration anymore. It is clearly not correct, because we can easily know the longest common subsequence should be $ABB$. This algorithm discards $A$ too early and causes the incorrect answer. 
 
 \problem{2}
 \solution
@@ -93,6 +93,8 @@ $\bullet \quad $ If $x_i = y_j $ then $ W[i,j] = weight(x_i) + W[i-1,j-1] , L[i,
 $\bullet \quad $ If $x_i \neq y_j $ , $W[i-1,j] > W[i,j-1] $ then $W[i,j] = W[i-1,j], L[i,j] = L[i-1,j]$ \\
 $\bullet \quad $ If $x_i \neq y_j $ , $W[i,j-1] > W[i-1,j] $ then $W[i,j] = W[i,j-1], L[i,j] = L[i,j-1]$ \\
 $\bullet \quad $ If $x_i \neq y_j $ , $W[i,j-1] = W[i-1,j] $ then $W[i,j] = W[i,j-1] = W[i-1,j], L[i,j] = \min \{ L[i,j-1], L[i-1,j] \}$ \\
+Extra information: \\
+The prefix $x_i$ chosen as the elements of the result.
 Correctness: \\
 Table $W[i,j]$ represent the maximum weight of the common subsequence of prefix $x_1,x_2,\cdots,x_i$ and $y_1,y_2,\cdots,y_j$. If the $x_i = y_j$, then we must append $x_i$ to the result common subsequence $S$. If we don't append $x_i$, and we get a result $S'$. We must can find a common subsequence $S$ with weight is larger than weight of $S'$. In case of $x_i \neq y_j$, we should let $W[i,j] = \max \{ W[i,j-1], W[i-1,j] \}$. If we don't choose the maximum weight, then we cannot meet the goal finding the "maximum" weight. If $x_i \neq y_j \ \&\  W[i,j-1] = W[i-1,j]$, In order to find the shortest maximum weight common subsequence, we need to take the length of the result into consideration. In order to achieve the result with mimimum length, clealy we should choose $L[i,j] = \min \{ L[i,j-1], L[i-1,j] \}$. \\
 Space complexity: \\
@@ -120,6 +122,8 @@ $\bullet \quad $ If $x_i = y_j $ then $ L[i,j] = L[i-1,j-1] + 1 , W[i,j] = W[i-1
 $\bullet \quad $ If $x_i \neq y_j $ , $L[i-1,j] > L[i,j-1] $ then $L[i,j] = L[i-1,j], W[i,j] = W[i-1,j]$ \\
 $\bullet \quad $ If $x_i \neq y_j $ , $L[i,j-1] > L[i-1,j] $ then $L[i,j] = L[i,j-1], W[i,j] = W[i,j-1]$ \\
 $\bullet \quad $ If $x_i \neq y_j $ , $L[i,j-1] = L[i-1,j] $ then $L[i,j] = L[i,j-1] = L[i-1,j], W[i,j] = \min \{ W[i,j-1], W[i-1,j] \}$ \\
+Extra information: \\
+The prefix $x_i$ chosen as the elements of the result.
 Correctness: \\
 Table $L[i,j]$ represent the maximum length of the common subsequence of prefix $x_1,x_2,\cdots,x_i$ and $y_1,y_2,\cdots,y_j$. If the $x_i = y_j$, then we must append $x_i$ to the result common subsequence $S$. If we don't append $x_i$, and we get a result $S'$. We must can find a common subsequence $S$ with length is larger than length of $S'$. In case of $x_i \neq y_j$, we should let $L[i,j] = \max \{ L[i,j-1], L[i-1,j] \}$. If we don't choose the maximum length, then we cannot meet the goal finding the "maximum" length. If $x_i \neq y_j \ \&\  L[i,j-1] = L[i-1,j]$, In order to find the longest minimum weight common subsequence, we need to take the weight of the result into consideration. In order to achieve the result with mimimum length, clealy we should choose $W[i,j] = \min \{ W[i,j-1], W[i-1,j] \}$. \\
 Space complexity: \\
@@ -143,6 +147,8 @@ $\bullet \quad i = 2 $ Then $Total[i] = fee[1,2]$ \\
 Recursion Case: \\
 $\bullet \quad i < j - 1$ \\
 $\bullet \quad Total[i] = Total[k] + fee[k,i]$ minimized over $ k = 2,\cdots,i-1$ \\
+Extra information: \\
+The optimal index $ i $ to return the path with minimum cost.
 Algorithm: \\
 \begin{algorithm}[H]
 \KwData{$1,n,fee[i,j]$}
