--- a/hw5.tex
+++ b/hw5.tex
@@ -80,6 +80,20 @@ Let's assume we have an optimal solution $A'$ to problem $P'$, we can find that 
 
 \problem{2}
 \solution
+(a) increasing order of weight: \\
+This algorithm is incorrect. Let's assume that we have two knapsacks both have capacities of 5. And we have five items with the following values and weights: \\
+item1: weight = 1, value = 1, item2: weight = 2, value = 2, item3: weight = 3, value = 3, item4: weight = 4, value = 4, item5: weight = 5, value = 100 \\
+According to the algorithm, we should choose the item with less weight to fill our knapsacks first. Then we can get the result: we fill one knapsack with item1 and item4 and fill another knapsack with item2 and item3, hence, the total value of this solution is 10. However, we can easily know that the optimal solution is filling one knapsack with item5 and another knapsack with item1 and item4 or item2 and item3. Then, we can get a total value of 105. 
+
+(b) decreasing order of value: \\
+This algorithm is incorrect. Let's assume that we have two knapsacks both have capacities of 5. And we have three items with the following values and weights: \\
+item1: weight = 10, value = 20, item2: weight = 5, value = 15, item3: weight = 4, value = 14 \\
+According to the algorithm, we should choose the item with higher value to fill our knapsacks first. Then we can get the following result: we fill one knapsack with half of item1 and fill another knapsack with item2, hence, the total value of this solution is 25. However, we can easily find out that the optimal solution is filling one knapsack with item5 and another knapsack with item3 and one tenth of item1. This solution gives us a higher total value which is 31. \\
+
+(c) decreasing order of value to weight ratio: \\
+This algorithm is incorrect. Let's assume that we have knapsack with capacity of 10 and one with capacity of 20. And we have two items with the following values and weights: \\
+item1: weight = 10, value = 20, item2: weight = 20, value = 20 \\
+According to the algorithm, we should choose the item with higher value to weight ratio to fill the knapsack with larger capacity first. Then we can get the following result: we fill the knapsack with capacity of 20 with item1 and fill the another knapsack with half of the item2, hence, the total value of this solution is 30. However, we can easily find that the optimal solution is filling the first knapsack with item2 and filling the second knapsack with item1. This solution gives us a higher total value which is 40. \\
 
 \problem{3}
 \solution
